got firmware to a fairly matching state, much of the tool

--- a/firmware/CST-Base_Station_1454.X/nbproject/Makefile-genesis.properties
+++ b/firmware/CST-Base_Station_1454.X/nbproject/Makefile-genesis.properties
@@ -1,8 +1,11 @@
 #
-#Sat Feb 08 16:18:11 PST 2014
-default.languagetoolchain.dir=/Applications/microchip/xc8/v1.12/bin
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=1f98a0eed69cb2a45c12981fa9470927
+#Sun Feb 09 22:44:29 PST 2014
 default.languagetoolchain.version=1.12
-host.platform=mac
-conf.ids=default
+conf.ids=default,pic16f1455
+default.languagetoolchain.dir=/Applications/microchip/xc8/v1.12/bin
+pic16f1455.languagetoolchain.version=1.12
+pic16f1455.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=52258db7536b2d1fec300cefc7ed9230
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=1f98a0eed69cb2a45c12981fa9470927
 default.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=52258db7536b2d1fec300cefc7ed9230
+pic16f1455.languagetoolchain.dir=/Applications/microchip/xc8/v1.12/bin
+host.platform=mac
