--- a/firmware/cstbase-hid/nbproject/Makefile-genesis.properties
+++ b/firmware/cstbase-hid/nbproject/Makefile-genesis.properties
@@ -1,11 +1,14 @@
 #
-#Mon Feb 10 17:36:38 PST 2014
+#Tue Feb 11 20:34:13 PST 2014
 PIC16F1454.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=52258db7536b2d1fec300cefc7ed9230
-conf.ids=PIC16F1455,PIC16F1454
+PIC16LF1454.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=52258db7536b2d1fec300cefc7ed9230
+conf.ids=PIC16F1455,PIC16F1454,PIC16LF1454
 PIC16F1455.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=52258db7536b2d1fec300cefc7ed9230
 PIC16F1455.languagetoolchain.version=1.21
+PIC16LF1454.languagetoolchain.version=1.21
 PIC16F1454.languagetoolchain.version=1.21
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=1f98a0eed69cb2a45c12981fa9470927
 PIC16F1454.languagetoolchain.dir=/Applications/microchip/xc8/v1.21/bin
 host.platform=mac
+PIC16LF1454.languagetoolchain.dir=/Applications/microchip/xc8/v1.21/bin
 PIC16F1455.languagetoolchain.dir=/Applications/microchip/xc8/v1.21/bin
